@@ -12,6 +12,9 @@ What's New in Python 2.5.1c1?
 Core and builtins
 -----------------
 
+- Bug #1576657: when setting a KeyError for a tuple key, make sure that
+  the tuple isn't used as the "exception arguments tuple".
+
 - Bug #1565514, SystemError not raised on too many nested blocks.
 
 - Bug #1576174: WindowsError now displays the windows error code
